<resources>
    <string name="app_name">American Football</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="touchdown">Touchdown</string>
    <string name="field_goal">Field Goal</string>
    <string name="safety">Safety</string>
    <string name="extra_points_1">Extra Points (+1)</string>
    <string name="extra_points_2">Extra Points (+2)</string>
    <string name="reset">Reset</string>
    <string name="_0">0</string>
</resources>